Refactoring and creation of gradle module